--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: Arial, sans-serif;
+}
+
+input {
+  font-family: Arial, sans-serif;
 }
 
 a {
